# div-games-studio

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  EXAMPLE.PRG  IMPROVEMENTS.md  README.md  ROADMAP.md  SPRINT-PROMPT.md  build.sh  convert_to_utf8.py  fix_encoding.py  scan_encoding.py
.claude/: settings.local.json
div/system/: lenguaje.div  lenguaje.int  ltlex.def  ltobj.def
div/tests/: run_tests.sh  test_files.prg  test_graphics.prg  test_math.prg  test_processes.prg  test_smoke.prg  test_strings.prg  test_trig.prg
docs/: LIBRO.DOC  SDL3-MIGRATION-REPORT.md  architecture-overview.md  code-editor-overview.md  code-review-2026-03-12.md  compiler-pipeline.md  div-language-intro.md  ide-guide.md  int64_roadmap.md  paint-editor-overview.md  snake-case-collision-report.md  user-manual.md  vm-and-runtime.md
docs/archive/: glossary-spanish-english.md  unsafe-string-audit.md  video-system-audit.md
original_msdos_source/: 386.mak  586.mak  C.BAK  C.BAT  D.LNK  D.MAP  DIV.CPP  DIV.EML  DIV.H  DIV.TAB  DIVASM.ASM  DIVC.CPP  EJEMPLO.PRG  GLOBAL.H  JPEGLIB.LIB  LIBJPEG.LIB  NUEVOFNT.FNT  Pack_EE.IDX  README.md  RGB_TAB.TMP  SOCCER.PRG  TD.BAT  TEST.FPG  TEST.PRG  TEST.WLD  TI.BAT  VISOR.LIB  d.PIF  judas.586  judas.lib  kk  sysdac.h
original_msdos_source/DIV_STUB/: DIV_STUB.H  DIV_STUB.LNK
original_msdos_source/DIV_STUB/asm/: E386.H  E586.H  EXEC.MAP
original_msdos_source/JPEGLIB/: JERROR.H  JINCLUDE.H  JPEGLIB.H
original_msdos_source/JUDAS/: JUDAS.LIB  JUDASRAW.BAK  JUDASSMP.ERR  JUDASWAV.BAK  JUDASWAV.C  MAKEFILE.BAK
original_msdos_source/MAP/TAPICES/: tapiz1.pcx  tapiz2.pcx  tapiz3.pcx  tapiz4.pcx  tapiz5.pcx  tapiz6.pcx  tapiz7.pcx  tapiz8.pcx  (+1 more)
original_msdos_source/Mod/: 2SPEDST.S3M  2SPEED.S3M  MEDIAMI.S3M  NOMEGUS.S3M  RARAMAN.S3M  RESACA0.S3M  RIT.S3M  ROCKRA.S3M  TATATA.S3M  TECSPEC.S3M  VIDA00.S3M
original_msdos_source/PMODE/: PMODE.ARJ
original_msdos_source/PRG/: EJEMPLO.PRG  PATHFIND.PRG  PRU_VPE.PRG  SCRECOPY.PRG  VPE.PRG  WLD_VIEW.PRG
original_msdos_source/Watcom/: WLSYSTEM.LNK
original_msdos_source/Wld/: _credits.pcx  _loadgame.pcx  _newgame.pcx  _options.pcx  _quit.pcx  _savegame.pcx  creditos.pcx  credits.pcx  loadgame.pcx  mascara.pcx  newgame_a.pcx  newgame_b.pcx  options.pcx  paletatitulo.pcx  quit.pcx  savegame.pcx  temp.pcx  titulo.pcx  tituloNEW.psd
original_msdos_source/convert/: C.BAK  C.BAT  FIX.BAK  fix.c  pcm2wav.c  pcx2map.c
original_msdos_source/dc/: DC.CPP  DC.LNK  OLD_DC.ARJ
original_msdos_source/del_div/: DIVKEYBO.CPP  FILES.INI  I.CPP  I.PIF  LENGUAJE.INS  PATHINFO.INI
original_msdos_source/help/: HELP.DIV
original_msdos_source/ins_div/: AUTORUN.INF  C.BAT  DIVLENGU.BAK  I.BAK  I.CPP  MAKEFILE.BAK  TD.BAT  VESA.H
original_msdos_source/ins_win/: AUTORUN.INF  Pathinfo.kk  Project1.dpr  Project1.dsk  Project1.res  Project1.~dp  Unit1.dcu  Unit1.dfm  Unit1.pas
original_msdos_source/mpatch/: C.BAT  MPATCH.CPP  TD.BAT
original_msdos_source/sprite3d/: ANIM.HPP  COMPLEX.BAK  COMPLEX.CPP  ERROR.LNK  ERRORES.HPP  GLOBAL.CPP  GLOBAL.HPP  HLRENDER.CPP  INTERFCE.H  LLRENDER.CPP  LLRENDER.ERR  LLRENDER.WAT  PACK.BAT  R.MAP  RESOURCE.CPP  SORT3D.C  SPRITE3D.ERR  WS.BAT
original_msdos_source/system/: LENGUAJE.DIV  SESSION.DIV  SESSION.DTF  USER.NFO  session.386
original_msdos_source/visor/: VISOR.LIB
reports/: REVIEW-ITEMS.md  SDL3-MIGRATION-IMPACT.md  architecture-overview.md  compiler-pipeline.md  phase1-warning-baseline.md  unsafe-string-audit.md  video-system-audit.md  vm-and-runtime.md  warnings-baseline-full.md
reports/commented-code/: REVIEW-ITEMS.md  det_vesa.md  div.md  divbasic.md  divbrow.md  divbrush.md  divc.md  divdsktp.md  divedit.md  diveffec.md  divfont.md  divforma.md  divfpg.md  divhandl.md  divhelp.md  divinsta.md  divkeybo.md  divmixer.md  divmouse.md  divpaint.md  divpalet.md  divpcm.md  divsetup.md  divsound.md  divtimer.md  divvideo.md  divwindo.md  global.md  ifs.md  index.md  judas-judas.md  judas-judasmod.md  judas-judasraw.md  judas-judass3m.md  judas-judaswav.md  judas-judasxm.md  runner-runner.md  runtime-debug-d.md  runtime-debug-decompiler.md  runtime-divlengu.md  (+16 more)
src/: 2acabada.hpp  charset.h  det_vesa.c  div.c  div.h  div_enums.h  div_string.h  div_stub.h  divasm.c  divbasic.c  divbin.c  divbrow.c  divbrush.c  divc.c  divcalc.c  divclock.c  divcolor.c  divdsktp.c  divedit.c  diveffec.c  divfont.c  divforma.c  divfpg.c  divgama.c  divhandl.c  divhelp.c  divinsta.c  divkeybo.c  divlengu.c  divmap3d.c  divmix.c  divmixer.c  divmixer.hpp  divmouse.c  divpack.c  divpaint.c  divpalet.c  divpcm.c  divsetup.c  divsound.c  (+23 more)
src/compiler/: calc.c  compiler.c  compiler_expression.c  compiler_internal.h  compiler_parser.c  imgload.c
src/div1run/: f.c  i.c  inter.h  mates.h  s.c  vesa.h
src/editor/: brush.c  charset.c  code.c  colorizer.c  editor.c  editor_edit.c  editor_file.c  editor_internal.h  editor_render.c  font.c  fpg.c  paint.c  paint_internal.h  paint_select.c  paint_tools.c  palette.c  pcm.c
src/formats/: fpg.c  image.c
src/ide/: browser.c  clock.c  desktop.c  effects.c  gamma.c  graphics.c  handler.c  handler_dialogs.c  handler_fonts.c  handler_internal.h  handler_map.c  help.c  installer.c  keyboard.c  language.c  main.c  main_desktop.c  main_dialogs.c  main_internal.h  mixer.c  mixer_ui.c  mouse.c  packer.c  recorder.c  setup.c  sound.c  sprite.c  trash.c  vesa.c  video.c  window.c
src/judas/: judas.c  judas.h  judascfg.h  judasdma.h  judasgus.h  judasmod.c  judasraw.c  judass3m.c  judassmp.c  judastbl.c  judaswav.c  judasxm.c
src/osx/: fmemopen.c  fmemopen.h
src/runner/: r.c  runner.c
src/runtime/: det_vesa.c  divfli.h  divlengu.c  divmixer.c  divmixer.hpp  divtimer.cpp  f.c  functions.c  i.c  inter.h  interpreter.c  joy.cpp  keyboard.h  language.c  mates.h  mixer.c  mixer.h  render.c  s.c
src/shared/: divsound.h  osdep.c  osdep.h  unzip.c
src/win/: osdepwin.c
tools/: copy_dlls.sh  defaults.cmake  linux.cmake  osx.cmake  pi.cmake  windows-native.cmake  windows.cmake
(+410 files in other folders)
