# CMAKE lists file for DIV GAMES STUDIO
# (c) 2015 Mike Green  
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(div2015)

# setup some defaults
INCLUDE ( ${CMAKE_CURRENT_LIST_DIR}/tools/defaults.cmake )

execute_process(
    COMMAND git log -1 --format=%h
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    OUTPUT_VARIABLE VERSION
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET
    RESULT_VARIABLE GIT_RESULT )

if(NOT GIT_RESULT EQUAL 0)
    set(VERSION "unknown")
endif()

add_definitions( -DGIT_SHA1="${VERSION}" )

SET(CLANG "C")

# Check which target we want
IF(NOT TARGETOS) 

# autodetect osx  / linux
	IF(APPLE)
		SET (TARGETOS "OSX")
	ELSE()
		SET(TARGETOS "LINUX")
	ENDIF()

ENDIF()

# set TARGET to lower
STRING( TOLOWER ${TARGETOS} LTARGET )

IF(EXISTS ${CMAKE_CURRENT_LIST_DIR}/tools/${LTARGET}.cmake )
	INCLUDE ( ${CMAKE_CURRENT_LIST_DIR}/tools/${LTARGET}.cmake )
ELSE()
	MESSAGE(SEND_ERROR "Cannot find ${CMAKE_CURRENT_LIST_DIR}/${LTARGET}.cmake")
ENDIF()


IF(DEBUG)
	SET(BUILD_LEVEL "-ggdb3 -O0" )
ELSE()
	SET(BUILD_LEVEL " -O1 ")
ENDIF()

#Check for OS Dependant functions and fall back to linux osdep if not set

IF(NOT OSDEP)
	SET(OSDEP "src/shared/osdep.c")
ENDIF()

# DLL plugin system removed (Phase 0 cleanup)

SET(ZIP_SOURCES "src/shared/lib/zip/src/zip.c")

FILE(GLOB SHARED_RUN "src/shared/run/*.c")

SET(SHARED_RUN ${SHARED_RUN} "src/shared/unzip.c")

# The name of our binary
IF(NOT DEFINED TARGET)
	SET(TARGET "div") 
ENDIF()

IF(NOT DEFINED PLATFORM)
	MESSAGE(SEND_ERROR "PLATFORM not defined. is ${TARGETOS} correct?")
ENDIF()

SET(RUNTIME "divrun-${PLATFORM}")
SET(DEBUG "divdbg-${PLATFORM}")
SET(RUNNER "d-${PLATFORM}")

set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")

INCLUDE(FindPkgConfig)

MESSAGE(STATUS "Adding Libraries")

MESSAGE(STATUS "CMAKE_FIND_ROOT_PATH: "  ${CMAKE_FIND_ROOT_PATH} )
MESSAGE(STATUS "CMAKE_SYSTEM_LIBRARY_PATH: "  ${CMAKE_SYSTEM_LIBRARY_PATH} )
MESSAGE(STATUS "CMAKE_INCLUDE_PATH: "  ${CMAKE_INCLUDE_PATH} )
MESSAGE(STATUS "CMAKE_SYSTEM_INCLUDE_PATH: "  ${CMAKE_SYSTEM_INCLUDE_PATH} )
# SETUP SDL ADDONS

IF(HAS_SDL EQUAL 1)
	MESSAGE(STATUS "Adding SDL Library")
	Include(FindSDL)
	include_directories(${SDL_INCLUDE_DIR})
	set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL_LIBRARY})

	ADD_DEFINITIONS( -DSDL=${HAS_SDL})
	
	IF(HAS_SDLMIXER)
		MESSAGE(STATUS "Adding SDL Mixer")

		Include(FindSDL_mixer)

		include_directories(${SDL_MIXER_INCLUDE_DIRS})
		set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL_MIXER_LIBRARIES} )
		ADD_DEFINITIONS( -DMIXER )

	ENDIF()

	IF(HAS_SDLIMAGE)
		MESSAGE(STATUS "Adding SDL Image")
		Include(FindSDL_mixer)
		include_directories(${SDL_IMAGE_INCLUDE_DIRS})
		set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL_IMAGE_LIBRARIES})
		ADD_DEFINITIONS( -DIMAGE )

	ENDIF()

	SET(OSDEP ${OSDEP} "src/shared/osdep/osd_sdl12.c")

ENDIF()

IF(HAS_SDL EQUAL 2)
	FIND_PACKAGE(SDL2 REQUIRED)
	include_directories(${SDL2_INCLUDE_DIRS})
	set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL2_LIBRARIES})
	ADD_DEFINITIONS( -DSDL2=${HAS_SDL})
	
	IF(HAS_SDLMIXER)
		MESSAGE(STATUS "Adding SDL2 Mixer")
		PKG_SEARCH_MODULE(SDLMIXER REQUIRED SDL2_mixer>=2.0.0)
		include_directories(${SDLMIXER_INCLUDE_DIRS})

		set(EXTRA_LIBS ${EXTRA_LIBS} ${SDLMIXER_LIBRARIES} )
		ADD_DEFINITIONS( -DMIXER )

	ENDIF()

	IF(HAS_SDLIMAGE)
		MESSAGE(STATUS "Adding SDL2 Image")
		PKG_SEARCH_MODULE(SDLIMAGE REQUIRED SDL_image>=2.0.0)
		include_directories(${SDLIMAGE_INCLUDE_DIRS})
		set(EXTRA_LIBS ${EXTRA_LIBS} ${SDLIMAGE_LIBRARIES})
		ADD_DEFINITIONS( -DIMAGE )

	ENDIF()

	SET(OSDEP ${OSDEP} "src/shared/osdep/osd_sdl2.c")

ENDIF()



IF(HAS_JPEG)
	MESSAGE(STATUS "Adding LIBJPG")
	ADD_DEFINITIONS( -DJPGLIB )
	SET(EXTRA_LIBS ${EXTRA_LIBS} "jpeg" )
ENDIF()

IF(HAS_ZLIB)
#	find_package( ZLIB REQUIRED )

    include_directories( ${ZLIB_INCLUDE_DIRS} )

	MESSAGE(STATUS "Adding ZLIB")
#	include_directories(${ZLIB_INCLUDE_DIRS})
	set(EXTRA_LIBS ${EXTRA_LIBS} "z" )
	ADD_DEFINITIONS( -DZLIB )

ENDIF()


IF(HAS_GIT)
#	find_library(GIT2 libsomelib.a)
	include(FindPkgConfig)
	pkg_search_module(GIT2 REQUIRED libgit2>=0.17.0)
#	find_package( GIT2 REQUIRED) 
	add_definitions(${GIT2_CFLAGS})
	link_directories(${GIT2_LIBRARY_DIRS})
	include_directories(${GIT2_INCLUDE_DIRS})
	set(EXTRA_LIBS ${EXTRA_LIBS} ${GIT2_LIBRARIES})

	set(EXTRA_LIBS ${EXTRA_LIBS} "pthread" )

#	SET (OS_LINK_FLAGS ${OS_LINK_FLAGS} "${GIT2_LIBRARY_DIRS}/libgit2.a" )
	ADD_DEFINITIONS( -DDIVGIT )
ENDIF()
IF(HAS_FLI)
	ADD_DEFINITIONS( -DUSE_FLI) 
ENDIF()

# MODE8/VPE, portrend, and DLL plugin system removed (Phase 0 cleanup)


ADD_DEFINITIONS (${OS_DEFINITIONS})

IF(HAS_SDL)

MESSAGE(STATUS "Using SDL-${HAS_SDL}")

ENDIF()

SET(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${OS_LINK_FLAGS} )

SET(PLATFORM_LIBS m ${OS_LIBS})

#SET(PLATFORM_LIBS "jpeg" "m" "z" "mingw32" "SDL" "SDLMain" "mingw32")


# default definitions
ADD_DEFINITIONS( -D_GNU_SOURCE)

INCLUDE_DIRECTORIES(src/shared src/)
SET(RUNNER_SOURCES "src/runner/r.c")
FILE(GLOB DIV_SOURCES "src/*.c")


FILE(GLOB SDLGFX_SOURCES "src/shared/lib/sdlgfx/SDL_framerate.c")

SET(DIV_SOURCES ${DIV_SOURCES} ${SDLGFX_SOURCES} )

# DLL and visor sources removed (Phase 0 cleanup)
FILE(GLOB RUNTIME_SOURCES "src/runtime/*.c")
FILE(GLOB DEBUG_SOURCES "src/runtime/debug/*.c")
#FILE(GLOB JUDAS_SOURCES "src/judas/*.c")
#SET(JUDAS_SOURCES "src/judas/judaswav.c" "src/judas/judas.c" ) 


#INCLUDE (tools/plugins.cmake)

#ADD_DEFINITIONS( -D${PLATFORM} -DMIXER )

SET(TARGET ${TARGET}-${PLATFORM} ) #-${GIT_BRANCH}-${GIT_COMMIT_HASH})

SET(DEMOTARGET ${TARGET}-DEMO ) #-${GIT_BRANCH}-${GIT_COMMIT_HASH})

# make this a c++ app
#IF(CPLUSPLUS) 
SET_SOURCE_FILES_PROPERTIES(${SDLGFX_SOURCES} ${SHARED_RUN} ${RUNNER_SOURCES} PROPERTIES LANGUAGE ${CLANG} )
SET_SOURCE_FILES_PROPERTIES(${RUNTIME_SOURCES} ${DEBUG_SOURCES} ${DIV_SOURCES} ${JUDAS_SOURCES} ${OSDEP} PROPERTIES LANGUAGE ${CLANG})

option(DIV_WARNING_BASELINE "Enable compiler warnings for baseline cleanup work" OFF)
set(DIV_WARNING_FLAGS "-w -Wno-unused-result -Wno-unused")
if(DIV_WARNING_BASELINE)
	set(DIV_WARNING_FLAGS "-Wall -Wextra -Wformat=2 -Wshadow -Wpointer-arith -Wcast-align")
endif()

ADD_DEFINITIONS( ${BUILD_LEVEL} -fpermissive -fno-omit-frame-pointer -funsigned-char ${DIV_WARNING_FLAGS} -D${PLATFORM}=1 -DTARGET="${TARGET}" -DRDEBUG="${DEBUG}" -DRUNTIME="${RUNTIME}")
# -DJPGLIB)

#ADD_DEFINITIONS( -D_GNU_SOURCE=1 -DZLIB -DSDLGFX ${OS_DEFINITIONS})


IF(APPLE)
ADD_DEFINITIONS( -ferror-limit=1 -D__WORDSIZE=64 )
SET( CMAKE_EXE_LINKER_FLAGS  "-lSDLmain -framework Cocoa" )
ELSE()
ADD_DEFINITIONS( -Wfatal-errors )
ENDIF()

# Amiga linker flags removed (Phase 0 cleanup)

#SET( CMAKE_EXE_LINKER_FLAGS  ${CMAKE_EXE_LINKER_FLAGS}  )
#set ( CMAKE_CXX_FLAGS "-mwindows")

#SET (TARGET ${TARGET}-CXX)
#ENDIF()


ADD_EXECUTABLE(
	${TARGET}
	src/global.h
	${DIV_SOURCES}
	${JUDAS_SOURCES}
	${ZIP_SOURCES}
	${OSDEP}
)
#
#ADD_EXECUTABLE(
#	${DEMOTARGET} 
#	src/global.h
#	${VISOR_SOURCES}
#	${DIV_SOURCES} 
#	${JUDAS_SOURCES}
#	${OSDEP}
#	${DLLSRC}
#)


ADD_EXECUTABLE(
	${RUNTIME}
	src/runtime/inter.h
	${RUNTIME_SOURCES}
	${JUDAS_SOURCES}
	${OSDEP}
	${SHARED_RUN}
	${SDLGFX_SOURCES}
)

ADD_EXECUTABLE(
	${DEBUG}
	src/runtime/inter.h src/runtime/include.div
	${RUNTIME_SOURCES}
	${DEBUG_SOURCES}
	${JUDAS_SOURCES}
	${OSDEP}
	${SHARED_RUN}
	${SDLGFX_SOURCES}
)

ADD_EXECUTABLE(
	${RUNNER}
	${RUNNER_SOURCES}
)

TARGET_COMPILE_DEFINITIONS( ${DEBUG} PRIVATE -DDEBUG)
TARGET_COMPILE_DEFINITIONS( ${RUNTIME} PRIVATE )

#TARGET_COMPILE_DEFINITIONS( ${DEMOTARGET} PRIVATE -DSHARE )
TARGET_COMPILE_DEFINITIONS( ${RUNTIME} PRIVATE -DDIV2 )
TARGET_COMPILE_DEFINITIONS( ${DEBUG} PRIVATE -DDIV2 )

set_property(TARGET ${DEBUG} PROPERTY INCLUDE_DIRECTORIES "${COMMON_INCLUDE}" "${CMAKE_CURRENT_SOURCE_DIR}/src/runtime" "${CMAKE_CURRENT_SOURCE_DIR}/src/shared" "${CMAKE_CURRENT_SOURCE_DIR}/src/")
set_property(TARGET ${RUNTIME} PROPERTY INCLUDE_DIRECTORIES "${COMMON_INCLUDE}" "${CMAKE_CURRENT_SOURCE_DIR}/src/runtime" "${CMAKE_CURRENT_SOURCE_DIR}/src/shared" "${CMAKE_CURRENT_SOURCE_DIR}/src/")


TARGET_LINK_LIBRARIES(${RUNNER} ${PLATFORM_LIBS} ${EXTRA_LIBS} )
TARGET_LINK_LIBRARIES(${TARGET} ${PLATFORM_LIBS} ${EXTRA_LIBS} ${GIT2_LIBRARIES})
#TARGET_LINK_LIBRARIES(${DEMOTARGET} ${EXTRA_LIBS} ${SDLGFX_LIBS} ${PLATFORM_LIBS} )
TARGET_LINK_LIBRARIES(${RUNTIME} ${PLATFORM_LIBS} ${EXTRA_LIBS} ${STATIC_LIBS})
TARGET_LINK_LIBRARIES(${DEBUG} ${PLATFORM_LIBS} ${EXTRA_LIBS})


SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES system/${TARGET} system/{$DEBUG} system/{$RUNNER} CMakeCache.txt CMakeFiles )

#ADD_CUSTOM_COMMAND(
#	TARGET ${TARGET}
#	COMMENT "-- Linking Executable ${TARGET}"
#	PRE_LINK
#)

SET(DEPLOY_DIR "${CMAKE_SOURCE_DIR}/div")

ADD_CUSTOM_COMMAND(
	TARGET ${TARGET}
	DEPENDS ${TARGET}
	COMMAND ${CMAKE_COMMAND} -E copy ${TARGET}${EXT} ${DEPLOY_DIR}/system/${TARGET}${EXT}
	COMMENT "-- DEPLOYING ${TARGET} to div/system/"
	POST_BUILD
)
ADD_CUSTOM_COMMAND(
	TARGET ${RUNTIME}
	DEPENDS ${RUNTIME}
	COMMAND ${CMAKE_COMMAND} -E copy ${RUNTIME}${EXT} ${DEPLOY_DIR}/system/${RUNTIME}${EXT}
	COMMENT "-- DEPLOYING ${RUNTIME} to div/system/"
	POST_BUILD
)
ADD_CUSTOM_COMMAND(
	TARGET ${DEBUG}
	DEPENDS ${DEBUG}
	COMMAND ${CMAKE_COMMAND} -E copy ${DEBUG}${EXT} ${DEPLOY_DIR}/system/${DEBUG}${EXT}
	COMMENT "-- DEPLOYING ${DEBUG} to div/system/"
	POST_BUILD
)
ADD_CUSTOM_COMMAND(
	TARGET ${RUNNER}
	DEPENDS ${RUNNER}
	COMMAND ${CMAKE_COMMAND} -E copy ${RUNNER}${EXT} ${DEPLOY_DIR}/${RUNNER}${EXT}
	COMMENT "-- DEPLOYING ${RUNNER} to div/"
	POST_BUILD
)


