# CMAKE lists file for DIV GAMES STUDIO
# (c) 2015 Mike Green, 2026 Daniel Navarro
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(div2015)

# Setup defaults
INCLUDE(${CMAKE_CURRENT_LIST_DIR}/tools/defaults.cmake)

# Git version hash
execute_process(
    COMMAND git log -1 --format=%h
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    OUTPUT_VARIABLE VERSION
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET
    RESULT_VARIABLE GIT_RESULT)

if(NOT GIT_RESULT EQUAL 0)
    set(VERSION "unknown")
endif()

add_definitions(-DGIT_SHA1="${VERSION}")

SET(CLANG "C")

# Load platform toolchain
IF(NOT TARGETOS)
    IF(APPLE)
        SET(TARGETOS "OSX")
    ELSE()
        SET(TARGETOS "LINUX")
    ENDIF()
ENDIF()

STRING(TOLOWER ${TARGETOS} LTARGET)

IF(EXISTS ${CMAKE_CURRENT_LIST_DIR}/tools/${LTARGET}.cmake)
    INCLUDE(${CMAKE_CURRENT_LIST_DIR}/tools/${LTARGET}.cmake)
ELSE()
    MESSAGE(SEND_ERROR "Cannot find ${CMAKE_CURRENT_LIST_DIR}/tools/${LTARGET}.cmake")
ENDIF()

IF(DEBUG)
    SET(BUILD_LEVEL "-ggdb3 -O0")
ELSE()
    SET(BUILD_LEVEL "-O1")
ENDIF()

# OS-dependent source fallback
IF(NOT OSDEP)
    SET(OSDEP "src/shared/osdep.c")
ENDIF()

SET(ZIP_SOURCES "src/shared/lib/zip/src/zip.c")

FILE(GLOB SHARED_RUN "src/shared/run/*.c")
SET(SHARED_RUN ${SHARED_RUN} "src/shared/unzip.c")

IF(NOT DEFINED TARGET)
    SET(TARGET "div")
ENDIF()

IF(NOT DEFINED PLATFORM)
    MESSAGE(SEND_ERROR "PLATFORM not defined. Is ${TARGETOS} correct?")
ENDIF()

SET(RUNTIME "divrun-${PLATFORM}")
SET(DEBUG "divdbg-${PLATFORM}")
SET(RUNNER "d-${PLATFORM}")

set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")

# SDL2 (required)
FIND_PACKAGE(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
set(EXTRA_LIBS ${EXTRA_LIBS} ${SDL2_LIBRARIES})
ADD_DEFINITIONS(-DSDL2=2)

INCLUDE(FindPkgConfig)

# SDL2_mixer
IF(HAS_SDLMIXER)
    MESSAGE(STATUS "Adding SDL2 Mixer")
    PKG_SEARCH_MODULE(SDLMIXER REQUIRED SDL2_mixer>=2.0.0)
    include_directories(${SDLMIXER_INCLUDE_DIRS})
    set(EXTRA_LIBS ${EXTRA_LIBS} ${SDLMIXER_LIBRARIES})
    ADD_DEFINITIONS(-DMIXER)
ENDIF()

SET(OSDEP ${OSDEP} "src/shared/osdep/osd_sdl2.c")

# JPEG support
IF(HAS_JPEG)
    MESSAGE(STATUS "Adding LIBJPEG")
    ADD_DEFINITIONS(-DJPGLIB)
    SET(EXTRA_LIBS ${EXTRA_LIBS} "jpeg")
ENDIF()

# zlib
IF(HAS_ZLIB)
    include_directories(${ZLIB_INCLUDE_DIRS})
    MESSAGE(STATUS "Adding ZLIB")
    set(EXTRA_LIBS ${EXTRA_LIBS} "z")
    ADD_DEFINITIONS(-DZLIB)
ENDIF()

# FLI animation support
IF(HAS_FLI)
    ADD_DEFINITIONS(-DUSE_FLI)
ENDIF()

ADD_DEFINITIONS(${OS_DEFINITIONS})

MESSAGE(STATUS "Using SDL2")

SET(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${OS_LINK_FLAGS})

SET(PLATFORM_LIBS m ${OS_LIBS})

ADD_DEFINITIONS(-D_GNU_SOURCE)

INCLUDE_DIRECTORIES(src/shared src/)
SET(RUNNER_SOURCES "src/runner/r.c")
FILE(GLOB DIV_SOURCES "src/*.c")
FILE(GLOB SDLGFX_SOURCES "src/shared/lib/sdlgfx/SDL_framerate.c")
SET(DIV_SOURCES ${DIV_SOURCES} ${SDLGFX_SOURCES})

FILE(GLOB RUNTIME_SOURCES "src/runtime/*.c")
FILE(GLOB DEBUG_SOURCES "src/runtime/debug/*.c")

SET(TARGET ${TARGET}-${PLATFORM})

SET_SOURCE_FILES_PROPERTIES(${SDLGFX_SOURCES} ${SHARED_RUN} ${RUNNER_SOURCES} PROPERTIES LANGUAGE ${CLANG})
SET_SOURCE_FILES_PROPERTIES(${RUNTIME_SOURCES} ${DEBUG_SOURCES} ${DIV_SOURCES} ${OSDEP} PROPERTIES LANGUAGE ${CLANG})

option(DIV_WARNING_BASELINE "Enable compiler warnings for baseline cleanup work" OFF)
set(DIV_WARNING_FLAGS "-w -Wno-unused-result -Wno-unused")
if(DIV_WARNING_BASELINE)
    set(DIV_WARNING_FLAGS "-Wall -Wextra -Wformat=2 -Wshadow -Wpointer-arith -Wcast-align")
endif()

ADD_DEFINITIONS(${BUILD_LEVEL} -fpermissive -fno-omit-frame-pointer -funsigned-char ${DIV_WARNING_FLAGS} -D${PLATFORM}=1 -DTARGET="${TARGET}" -DRDEBUG="${DEBUG}" -DRUNTIME="${RUNTIME}")

ADD_DEFINITIONS(-Wfatal-errors)

# Executables
ADD_EXECUTABLE(${TARGET} src/global.h ${DIV_SOURCES} ${ZIP_SOURCES} ${OSDEP})
ADD_EXECUTABLE(${RUNTIME} src/runtime/inter.h ${RUNTIME_SOURCES} ${OSDEP} ${SHARED_RUN} ${SDLGFX_SOURCES})
ADD_EXECUTABLE(${DEBUG} src/runtime/inter.h src/runtime/include.div ${RUNTIME_SOURCES} ${DEBUG_SOURCES} ${OSDEP} ${SHARED_RUN} ${SDLGFX_SOURCES})
ADD_EXECUTABLE(${RUNNER} ${RUNNER_SOURCES})

TARGET_COMPILE_DEFINITIONS(${DEBUG} PRIVATE -DDEBUG -DDIV2)
TARGET_COMPILE_DEFINITIONS(${RUNTIME} PRIVATE -DDIV2)

set_property(TARGET ${DEBUG} PROPERTY INCLUDE_DIRECTORIES "${COMMON_INCLUDE}" "${CMAKE_CURRENT_SOURCE_DIR}/src/runtime" "${CMAKE_CURRENT_SOURCE_DIR}/src/shared" "${CMAKE_CURRENT_SOURCE_DIR}/src/")
set_property(TARGET ${RUNTIME} PROPERTY INCLUDE_DIRECTORIES "${COMMON_INCLUDE}" "${CMAKE_CURRENT_SOURCE_DIR}/src/runtime" "${CMAKE_CURRENT_SOURCE_DIR}/src/shared" "${CMAKE_CURRENT_SOURCE_DIR}/src/")

TARGET_LINK_LIBRARIES(${RUNNER} ${PLATFORM_LIBS} ${EXTRA_LIBS})
TARGET_LINK_LIBRARIES(${TARGET} ${PLATFORM_LIBS} ${EXTRA_LIBS})
TARGET_LINK_LIBRARIES(${RUNTIME} ${PLATFORM_LIBS} ${EXTRA_LIBS})
TARGET_LINK_LIBRARIES(${DEBUG} ${PLATFORM_LIBS} ${EXTRA_LIBS})

# Deploy executables to div/ after build
SET(DEPLOY_DIR "${CMAKE_SOURCE_DIR}/div")

ADD_CUSTOM_COMMAND(TARGET ${TARGET} DEPENDS ${TARGET}
    COMMAND ${CMAKE_COMMAND} -E copy ${TARGET}${EXT} ${DEPLOY_DIR}/system/${TARGET}${EXT}
    COMMENT "-- DEPLOYING ${TARGET} to div/system/" POST_BUILD)

ADD_CUSTOM_COMMAND(TARGET ${RUNTIME} DEPENDS ${RUNTIME}
    COMMAND ${CMAKE_COMMAND} -E copy ${RUNTIME}${EXT} ${DEPLOY_DIR}/system/${RUNTIME}${EXT}
    COMMENT "-- DEPLOYING ${RUNTIME} to div/system/" POST_BUILD)

ADD_CUSTOM_COMMAND(TARGET ${DEBUG} DEPENDS ${DEBUG}
    COMMAND ${CMAKE_COMMAND} -E copy ${DEBUG}${EXT} ${DEPLOY_DIR}/system/${DEBUG}${EXT}
    COMMENT "-- DEPLOYING ${DEBUG} to div/system/" POST_BUILD)

ADD_CUSTOM_COMMAND(TARGET ${RUNNER} DEPENDS ${RUNNER}
    COMMAND ${CMAKE_COMMAND} -E copy ${RUNNER}${EXT} ${DEPLOY_DIR}/${RUNNER}${EXT}
    COMMENT "-- DEPLOYING ${RUNNER} to div/" POST_BUILD)

# Auto-copy required DLLs on Windows
if(WIN32)
    ADD_CUSTOM_COMMAND(TARGET ${TARGET} POST_BUILD
        COMMAND bash "${CMAKE_SOURCE_DIR}/tools/copy_dlls.sh"
            "${DEPLOY_DIR}/system/${TARGET}${EXT}" "${DEPLOY_DIR}/system/"
        COMMENT "-- Copying required DLLs to div/system/")
endif()
